--- a/assignment1/Client/src/Components/Selection/selection.css
+++ b/assignment1/Client/src/Components/Selection/selection.css
@@ -18,10 +18,12 @@
 button {
   border-radius: 15px;
   padding: 5px;
-  background-color: rgb(214, 214, 214);
+  background-color: black;
+  color: white;
 }
 
 button:hover {
-  background-color: rgb(153, 153, 153);
+  background-color: white;
+  color: black;
   cursor: pointer;
 }
