--- a/assignment2/Client/ClusterOfBlogs/ClusterOfBlogs/MainWindow.xaml
+++ b/assignment2/Client/ClusterOfBlogs/ClusterOfBlogs/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TreeView x:Name="treeView" HorizontalAlignment="Left" Height="133" Margin="132,113,0,0" VerticalAlignment="Top" Width="128"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="195,321,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <TreeView x:Name="treeView" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" VerticalAlignment="Top" Width="444"/>
+        <Button x:Name="button" Content="Load new tree" HorizontalAlignment="Left" Margin="621,211,0,0" VerticalAlignment="Top" Width="115" Click="button_Click"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="108" Margin="524,301,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="212"/>
 
     </Grid>
