--- a/assignment4/MachineLearning/MachineLearning/MainWindow.xaml
+++ b/assignment4/MachineLearning/MachineLearning/MainWindow.xaml
@@ -7,11 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="73" Margin="79,24,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="138"/>
-        <Button x:Name="button" Content="Start" HorizontalAlignment="Left" Margin="559,277,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="36" Margin="30,166,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="396"/>
+        <Button x:Name="button" Content="Regular" HorizontalAlignment="Left" Margin="559,277,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
         <ComboBox x:Name="fileSelection" HorizontalAlignment="Left" Margin="559,24,0,0" VerticalAlignment="Top" Width="203"/>
         <CheckBox x:Name="randSelection" Content="Randomize" HorizontalAlignment="Left" Margin="691,280,0,0" VerticalAlignment="Top"/>
-        <DataGrid x:Name="table" HorizontalAlignment="Left" Height="161" Margin="130,207,0,0" VerticalAlignment="Top" Width="230"/>
+        <DataGrid x:Name="table" HorizontalAlignment="Left" Height="161" Margin="30,207,0,0" VerticalAlignment="Top" Width="396"/>
+        <ComboBox x:Name="foldSelection" HorizontalAlignment="Left" Margin="651,220,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem>3</ComboBoxItem>
+            <ComboBoxItem IsSelected="true">5</ComboBoxItem>
+            <ComboBoxItem>10</ComboBoxItem>
+        </ComboBox>
+        <Button x:Name="button1" Content="Cross-Validation" HorizontalAlignment="Left" Margin="559,320,0,0" VerticalAlignment="Top" Width="127" Click="button1_Click"/>
+        <DataGrid x:Name="foldTable" HorizontalAlignment="Left" Height="74" Margin="30,58,0,0" VerticalAlignment="Top" Width="396"/>
+        <Label x:Name="label" Content="File to use" HorizontalAlignment="Left" Margin="490,20,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="Nr of folds" HorizontalAlignment="Left" Margin="580,218,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
